                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 30-01-2006 fixed: focused button was not remembered sometimes (homescreen most obvious)
 - 30-01-2006 fixed: detection of invalid highlights didn't see button 0 as invalid
 - 30-01-2006 added: auto disable unsupported streams in dvdplayer
 - 30-01-2006 changed: subtitle stream selection to work same as audio stream selection in dvdplayer
 - 30-01-2006 changed: settings are only saved on app exit if settings.xml exists.
 - 30-01-2006 changed: If less than 4 lines are active on the LCD, the others are blanked out, and whitespace in the xml file should now be respected.
 - 29-01-2006 fixed: playing dts streams in dvdplayer resulted in almost only noise
 - 29-01-2006 updated: ffmpeg for dvdplayer
 - 29-01-2006 fixed: big memory leak in dvdplayer
 - 29-01-2006 fixed: Window.IsActive() didn't return correctly for dialogs that have multiple id's (eg Audio and Video OSD settings).
 - 29-01-2006 fixed: seeking in cube codec. also added .hps.
 - 29-01-2006 fixed: Caching of Textures.xpr to Z: when run from DVD, thanks to Zak.
 - 29-01-2006 fixed: Large EXIF thumbs in images could cause thumbs to not display.
 - 29-01-2006 fixed: Scripts Info window did not close correctly.
 - 29-01-2006 fixed: Not'd skin conditions weren't being checked correctly (eg !Skin.HasSetting, !Player.Paused etc.)
 - 29-01-2006 changed: only smb:// urls are checked for workgroup/domain. allows semicolon to be used as username and password in other protocols.
 - 29-01-2006 fixed: SF.net bug report [ 1411396 ] NSF audio pitched up. 
 - 28-01-2006 added: cube codec to paplayer. plays gamecube/ps2/xbox music (from games). based on in_cube.